--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/projects/cake-bakery/styles/index.css" />
     <title>Cake Bakery</title>
   </head>
@@ -41,6 +47,18 @@
         <li><a href="#">Contact Us</a></li>
       </ul>
     </nav>
-    <script src="/projects/cake-bakery/src/main.js"></script>
+    <div class="carousel-container">
+      <div class="carousel-slide">
+        <img src="/projects/cake-bakery/images/1.jpg" alt="" />
+      </div>
+    </div>
+    <button id="prevBtn">
+      <i class="fas fa-angle-left fa-w-16 fa-xl"></i>
+    </button>
+    <button id="nextBtn">
+      <i class="fas fa-angle-right fa-w-16 fa-xl"></i>
+    </button>
+    <script src="/projects/cake-bakery/src/dropdown-nav.js"></script>
+    <script src="/projects/cake-bakery/src/slider.js"></script>
   </body>
 </html>
