added cakes boxes and about content

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           We can made your dream come true with our amazing cakes and our
           especial catering
         </p>
-        <button id="videoBtn">Watch Our Video</button>
+        <button class="color-btn" id="videoBtn">Watch Our Video</button>
       </div>
       <button id="prevBtn">
         <i class="fas fa-angle-left fa-w-16 fa-xl"></i>
@@ -79,6 +79,53 @@
           ></iframe>
         </div>
       </div>
+    </div>
+    <div class="cakes-banner">
+      <div class="cakes-container">
+        <ul class="cakes-img">
+          <li class="cake-box">
+            <p>Chocolate</p>
+            <img src="/projects/cake-bakery/images/img1.png" alt="" />
+          </li>
+          <li class="cake-box">
+            <p>Strawberry</p>
+            <img src="/projects/cake-bakery/images/img2.png" alt="" />
+          </li>
+          <li class="cake-box">
+            <p>Pista</p>
+            <img src="/projects/cake-bakery/images/img3.png" alt="" />
+          </li>
+          <li class="cake-box">
+            <p>Vainilla</p>
+            <img src="/projects/cake-bakery/images/img4.png" alt="" />
+          </li>
+        </ul>
+        <div class="last-box">
+          <li class="cake-box">
+            <p>Muffins</p>
+            <img src="/projects/cake-bakery/images/img5.png" alt="" />
+          </li>
+        </div>
+      </div>
+    </div>
+    <div class="about">
+      <div class="about-top-text">
+        <p class="text-uppercase">a few words</p>
+        <h2>Welcome To Our Cake Bakery</h2>
+        <h4>
+          We will make you experience a fantastic flavor with our excellent
+          cakes and catering events
+        </h4>
+        <p>
+          With years of experience in the market and the best attitude, we will
+          create the perfect cake or event for you and your family and friends
+        </p>
+        <button class="color-btn about-btn">Learn More</button>
+        <div class="about-img">
+          <img src="/projects/cake-bakery/images/about.png" alt="" />
+        </div>
+      </div>
+      <div class="about-center-text"></div>
     </div>
     <script src="/projects/cake-bakery/src/dropdown-nav.js"></script>
     <script src="/projects/cake-bakery/src/slider.js"></script>
