add short about section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,21 @@
           <img src="/projects/cake-bakery/images/about.png" alt="" />
         </div>
       </div>
-      <div class="about-center-text"></div>
+      <div class="about-center-text">
+        <i class="fas fa-utensils"></i>
+        <p class="text-uppercase">our amazing and tasty cakes</p>
+        <h4>
+          We have the best recipe and the best confectioners to make our cakes
+          the best in the world. Our ingredients and our chefs will make the
+          catering of your party unforgettable
+        </h4>
+        <h5>Chloe Jack <span>(Master Chef)</span></h5>
+      </div>
+      <img
+        src="/projects/cake-bakery/images/cake7.png"
+        alt=""
+        class="cake-style"
+      />
     </div>
     <script src="/projects/cake-bakery/src/dropdown-nav.js"></script>
     <script src="/projects/cake-bakery/src/slider.js"></script>
