--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
       </div>
     </div>
-    <div class="about">
+    <section class="about">
       <div class="about-top-text">
         <p class="text-uppercase">a few words</p>
         <h2>Welcome To Our Cake Bakery</h2>
@@ -140,6 +140,40 @@
         alt=""
         class="cake-style"
       />
+    </section>
+    <div class="services">
+      <div class="center-services">
+        <div class="support-grid">
+          <i class="far fa-heart"></i>
+          <h5 class="text-uppercase">Made with love</h5>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius harum
+            dolorum rerum voluptatum consectetur voluptates, nostrum esse alias
+            corporis quibusdam asperiores architecto officiis aliquid dolores
+            eum, minima quos mollitia! Eligendi?
+          </p>
+        </div>
+        <div class="support-grid">
+          <i class="fas fa-birthday-cake"></i>
+          <h5 class="text-uppercase">Seasonal Pastries</h5>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia
+            recusandae aliquid iure repellendus in placeat tempora inventore?
+            Quasi sapiente officiis eaque atque recusandae! Voluptates, corrupti
+            quod eum veritatis nostrum explicabo.
+          </p>
+        </div>
+        <div class="support-grid">
+          <i class="far fa-calendar"></i>
+          <h5 class="text-uppercase">EVENT CATERING</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, fuga,
+            quae inventore quidem similique earum hic aliquam necessitatibus
+            molestias sapiente, reiciendis minus quod distinctio eligendi.
+            Pariatur officia adipisci illo est.
+          </p>
+        </div>
+      </div>
     </div>
     <script src="/projects/cake-bakery/src/dropdown-nav.js"></script>
     <script src="/projects/cake-bakery/src/slider.js"></script>
