--- a/index.html
+++ b/index.html
@@ -233,6 +233,57 @@
         </div>
         </div>
     </div>
+    <div class="news">
+      <div class="order">
+        <div class="order-text">
+          <h3>Order a Cake</h3>
+          <p>Order one of ours best cakes of the place and enjoy the fantastic flavor of our recipes!</p>
+        </div>
+        <form action="index.html" >
+          <div class="form-group">
+            <label>Shape</label>
+            <select required>
+              <option value>Select</option>
+              <option value="0">Round</option>
+              <option value="1">Rectangle</option>
+              <option value="2">Square</option>
+              <option value="3">Custom</option>
+            </select>
+          </div>
+          <div class="form-group">
+              <label>Levels</label>
+              <select required>
+                <option value>Select</option>
+                <option value="0">1</option>
+                <option value="1">2</option>
+                <option value="2">3</option>
+                <option value="3">4</option>
+              </select>
+          </div>
+          <div class="form-group">
+              <label>Size</label>
+              <select required>
+                <option value>Select</option>
+                <option value="0">4 inch</option>
+                <option value="1">6 inch</option>
+                <option value="2">8 inch</option>
+                <option value="3">10 inch</option>
+              </select>
+          </div>
+          <div class="form-group">
+              <label>Flavor</label>
+              <select required>
+                <option value>Select</option>
+                <option value="0">Chocolate</option>
+                <option value="1">Butterscotch</option>
+                <option value="2">Strawberry</option>
+                <option value="3">Vainillas</option>
+              </select>
+          </div>
+      <input type="submit" value="Order" class="order-btn">
+        </form>
+      </div>
+    </div>
     <script src="/projects/cake-bakery/src/dropdown-nav.js"></script>
     <script src="/projects/cake-bakery/src/slider.js"></script>
     <script src="/projects/cake-bakery/src/modal.js"></script>
