changed listener events in carousel.js

--- a/index.html
+++ b/index.html
@@ -201,10 +201,8 @@
       </div>
       <div class="galleryContainer">
         <div class="slideShowContainer">
-            <div id="playPause" onclick="playPauseSlides()"></div>
-            <div onclick="plusSlides(-1)" class="nextPrevBtn leftArrow"><span class="arrow arrowLeft"></span></div>
-            <div onclick="plusSlides(1)" class="nextPrevBtn rightArrow"><span class="arrow arrowRight"></span></div>
-            <div class="captionTextHolder"><p class="captionText slideTextFromTop"></p></div>
+            <div id="backImgBtn" class="nextPrevBtn leftArrow"><span class="arrow arrowLeft"></span></div>
+            <div id="nextImgBtn" class="nextPrevBtn rightArrow"><span class="arrow arrowRight"></span></div>
             <div class="imageHolder">
                 <h4>Strawberry Cakes</h4>
                 <p>One of the classic cakes of the whole world, made with our special strawberry, you are going to tasty the best cake.</p>
