added news section and support section

--- a/index.html
+++ b/index.html
@@ -281,6 +281,53 @@
       <input type="submit" value="Order" class="order-btn">
         </form>
       </div>
+      <div class="company-news">
+        <h3>Company News</h3>
+        <div class="news-grid">
+          <div class="news-top">
+            <div class="news-img">
+                <img src="/projects/cake-bakery/images/news1.jpg" alt="">
+            </div>
+            <div class="news-bottom-text">
+              <p>Sep 12st, 2019</p>
+              <h5>Little bakers to work!</h5>
+            </div>
+          </div>
+        </div>
+        <div class="news-grid">
+          <div class="news-top">
+            <img src="/projects/cake-bakery/images/news2.jpg" alt="">
+            <div class="news-bottom-text">
+              <p>Oct 27st, 2019</p>
+              <h5>How to surprise your lover.</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="support">
+    <div class="support-title">
+      <h3>Help & Support</h3>
+      <p>We are for any questions or queries you have about our products or services.</p>
+    </div>
+    <div class="support-item">
+        <i class="fas fa-headphones"></i>
+        <h5 class="text-uppercase">online support</h5>
+        <p>Feel free to call us if you have any question or querie, we are going to be for you.</p>
+        <button class="headphones-btn">Call Us</button>
+    </div>
+    <div class="support-item">
+        <i class="fas fa-comments"></i>
+        <h5 class="text-uppercase">live chat 24/7</h5>
+        <p>Chat with us anytime and anyhour, we have people who is going to answer you.</p>
+        <button class="comment-btn">Let's Chat</button>
+    </div>
+    <div class="support-item">
+        <i class="fas fa-question"></i>
+        <h5 class="text-uppercase">any questions</h5>
+        <p>Feel free to ask any kind of question, we will answer it without problem.</p>
+        <button class="question-btn">Learn More</button>
+    </div>
     </div>
     <script src="/projects/cake-bakery/src/dropdown-nav.js"></script>
     <script src="/projects/cake-bakery/src/slider.js"></script>
