--- a/index.html
+++ b/index.html
@@ -329,6 +329,20 @@
         <button class="question-btn">Learn More</button>
     </div>
     </div>
+    <footer>
+      <div class="footer-container">
+        <div class="footer-social">
+          <ul class="footer-list">
+            <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href=""><i class="fab fa-twitter"></i></a></li>
+            <li><a href=""><i class="fab fa-dribbble"></i></a></li>
+            <li><a href=""><i class="fab fa-vk"></i></a></li>
+          </ul>
+        </div>
+        <p class="footer-copyright">© 2018 Cake Bakery. All Rights Reserved | by <a href="deniscbrex.com" class="deniscbrex">Denis Cuenca Brex</a></p>
+      </div>
+      <img src="/projects/cake-bakery/images/chef.png" alt="" class="chef">
+    </footer>
     <script src="/projects/cake-bakery/src/dropdown-nav.js"></script>
     <script src="/projects/cake-bakery/src/slider.js"></script>
     <script src="/projects/cake-bakery/src/modal.js"></script>
