--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </h1>
         <ul class="max-nav-links">
           <li><a href="">Home</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><a href="/projects/cake-bakery/about.html">About Us</a></li>
           <li><a href="#">Gallery</a></li>
           <li><a href="#">Contact Us</a></li>
         </ul>
@@ -49,7 +49,7 @@
       </div>
       <ul class="nav-links">
         <li><a href="">Home</a></li>
-        <li><a href="#">About Us</a></li>
+        <li><a href="/projects/cake-bakery/about.html">About Us</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Contact Us</a></li>
       </ul>
