added about content

--- a/about.html
+++ b/about.html
@@ -53,6 +53,42 @@
         <li><a href="#">Contact Us</a></li>
       </ul>
     </nav>
+    <div class="background-cake">
+      <img src="/projects/cake-bakery/images/5.jpg" alt="">
+    </div>
+    <div class="breadcrumb">
+      <ul>
+        <li><a href="">Home</a></li>
+        <li class="breadcrumb-item">About Us</li>
+      </ul>
+    </div>
+    <div class="about">
+      <div class="about-img">
+        <img src="/projects/cake-bakery/images/about.jpg" alt="">
+      </div>
+      <div class="about-content">
+        <h3>About Us</h3>
+        <p>We are one of the best bakerys in the world and we tell you why.</p>
+        <div class="about-boxes">
+          <div class="support-grid about-grid">
+            <i class="far fa-heart"></i>
+            <h5 class="text-uppercase">Made with love</h5>
+            <p>
+              All our cakes are made with great effort and passion, since we want
+              your experience to be the best
+            </p>
+          </div>
+          <div class="support-grid about-grid">
+            <i class="fas fa-glass-martini"></i>
+            <h5 class="text-uppercase">Seasonal Pastries</h5>
+            <p>
+              Seasonal pastries are only made for a few weeks each year, so get
+              them while you can. They are great!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="services">
       <div class="center-services">
         <div class="support-grid">
